# TM_Discord_Bot

./: .env.example  README.md  main.py  pyproject.toml
lib/: chunker.py  discord_bot.py  embedder.py  llm.py  scrape_web.py  urls.py
results/: BACHELOR_AUTOTECHNOLOGIE.json  BACHELOR_ELEKTROMECHANICA.json  BACHELOR_ELEKTRONICA_ICT.json  BACHELOR_ONTWERP_EN_PRODUCTIETECHNOLOGIE.json  Info_Pages.parquet  Info_Pages_Eval.json  Traject_AUTO.json  Traject_EM.json  Traject_ONTWERP.json  courses.json  courses_by_fase.json
