[project]
name = "test-fetch-tm-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "discord-py>=2.6.4",
    "dotenv>=0.9.9",
    "emoji>=2.15.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
