[project]
name = "test-fetch-tm-courses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.12.0",
    "beautifulsoup4>=4.14.3",
    "bitsandbytes>=0.49.1",
    "discord-py>=2.6.4",
    "docling>=2.68.0",
    "dotenv>=0.9.9",
    "emoji>=2.15.0",
    "ftfy>=6.3.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "pyarrow>=23.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "trafilatura>=2.0.0",
    "transformers>=4.57.6",
]
